# n-body-problem

./: .cursorignore  .gitignore  CMakeLists.txt  README.md  main.cpp
core/: Body.hpp  DoubleDouble.cpp  DoubleDouble.h  Vector.hpp  algos.h
data/: kuiper_belt_test.csv  main_belt_test.csv
renderers/: CairoRenderer.hpp  GraphWidget.hpp  GridVisualizationWidget.hpp  GtkmmRenderer.hpp  RenderDialog.hpp  RenderEngine.hpp  Renderer.hpp  VideoRecorder.hpp
simulators/: NewtonianSimulator.hpp  ParticleMeshSimulator.hpp  Simulator.hpp
systems/: CircleSystem.hpp  RingSystem.hpp  SolarSystem.hpp  System.hpp  ThreeBodySystem.hpp  TwoBodySystem.hpp
